fixes #5213 - footer doesn't fit on one line for spanish version

--- a/docs/sites/all/themes/ssd/sass/style.scss
+++ b/docs/sites/all/themes/ssd/sass/style.scss
@@ -711,7 +711,7 @@ footer.footer {
   padding-bottom: 50px;
 }
 .region-footer {
-  margin-left: 50px;
+  margin-left: 12px;
 }
 .region-footer,
 .region-footer #block-menu-menu-footer-links,
